--- a/Resources/res/plist/level19.plist
+++ b/Resources/res/plist/level19.plist
@@ -7,7 +7,7 @@
 		<dict>
 			<key>1</key>
 			<string>value</string>
-			<key></key>
+			<key>x1</key>
 			<string>10x4x5</string>
 			<key>answer</key>
 			<string>200</string>
