--- a/Resources/res/plist/level2.plist
+++ b/Resources/res/plist/level2.plist
@@ -112,7 +112,7 @@
 			<key>14</key>
 			<string>value</string>
 			<key>x1</key>
-			<string>139</string>
+			<string>13-9</string>
 			<key>answer</key>
 			<string>4</string>
 		</dict>
