--- a/Resources/res/plist/level2.plist
+++ b/Resources/res/plist/level2.plist
@@ -5,205 +5,293 @@
 	<key>anspro</key>
 	<array>
 		<dict>
-			<key>1</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>9-6</string>
-			<key>answer</key>
-			<string>3</string>
-		</dict>
+            <key>1</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>10-9</string>
+            <key>answer</key>
+            <string>1</string>
+        </dict>
 		<dict>
-			<key>2</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>6-4</string>
-			<key>answer</key>
-			<string>2</string>
-		</dict>
+            <key>2</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>10-8</string>
+            <key>answer</key>
+            <string>2</string>
+        </dict>
 		<dict>
-			<key>3</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>10-7</string>
-			<key>answer</key>
-			<string>3</string>
-		</dict>
+            <key>3</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>10-7</string>
+            <key>answer</key>
+            <string>3</string>
+        </dict>
 		<dict>
-			<key>4</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>10-8</string>
-			<key>answer</key>
-			<string>2</string>
-		</dict>
+            <key>4</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>10-6</string>
+            <key>answer</key>
+            <string>4</string>
+        </dict>
 		<dict>
-			<key>5</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>11-9</string>
-			<key>answer</key>
-			<string>2</string>
-		</dict>
+            <key>5</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>10-5</string>
+            <key>answer</key>
+            <string>5</string>
+        </dict>
 		<dict>
-			<key>6</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>13-9</string>
-			<key>answer</key>
-			<string>4</string>
-		</dict>
+            <key>6</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>10-4</string>
+            <key>answer</key>
+            <string>6</string>
+        </dict>
 		<dict>
-			<key>7</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>12-8</string>
-			<key>answer</key>
-			<string>4</string>
-		</dict>
+            <key>7</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>10-3</string>
+            <key>answer</key>
+            <string>7</string>
+        </dict>
 		<dict>
-			<key>8</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>12-5</string>
-			<key>answer</key>
-			<string>7</string>
-		</dict>
+            <key>8</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>10-2</string>
+            <key>answer</key>
+            <string>8</string>
+        </dict>
 		<dict>
-			<key>9</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>7-5</string>
-			<key>answer</key>
-			<string>2</string>
-		</dict>
+            <key>9</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>9-8</string>
+            <key>answer</key>
+            <string>1</string>
+        </dict>
 		<dict>
-			<key>10</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>6-3</string>
-			<key>answer</key>
-			<string>3</string>
-		</dict>
+            <key>10</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>9-7</string>
+            <key>answer</key>
+            <string>2</string>
+        </dict>
 		<dict>
-			<key>11</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>7-3</string>
-			<key>answer</key>
-			<string>4</string>
-		</dict>
+            <key>11</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>9-6</string>
+            <key>answer</key>
+            <string>3</string>
+        </dict>
 		<dict>
-			<key>12</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>13-2</string>
-			<key>answer</key>
-			<string>11</string>
-		</dict>
+            <key>12</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>9-5</string>
+            <key>answer</key>
+            <string>4</string>
+        </dict>
 		<dict>
-			<key>13</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>7-4</string>
-			<key>answer</key>
-			<string>3</string>
-		</dict>
+            <key>13</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>9-4</string>
+            <key>answer</key>
+            <string>5</string>
+        </dict>
 		<dict>
-			<key>14</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>13-9</string>
-			<key>answer</key>
-			<string>4</string>
-		</dict>
+            <key>14</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>9-3</string>
+            <key>answer</key>
+            <string>6</string>
+        </dict>
 		<dict>
-			<key>15</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>11-5</string>
-			<key>answer</key>
-			<string>6</string>
-		</dict>
+            <key>15</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>9-2</string>
+            <key>answer</key>
+            <string>7</string>
+        </dict>
 		<dict>
-			<key>16</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>13-5</string>
-			<key>answer</key>
-			<string>8</string>
-		</dict>
+            <key>16</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>8-7</string>
+            <key>answer</key>
+            <string>1</string>
+        </dict>
 		<dict>
-			<key>17</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>11-8</string>
-			<key>answer</key>
-			<string>3</string>
-		</dict>
+            <key>17</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>8-6</string>
+            <key>answer</key>
+            <string>2</string>
+        </dict>
 		<dict>
-			<key>18</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>13-3</string>
-			<key>answer</key>
-			<string>10</string>
-		</dict>
+            <key>18</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>8-5</string>
+            <key>answer</key>
+            <string>3</string>
+        </dict>
 		<dict>
-			<key>19</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>11-3</string>
-			<key>answer</key>
-			<string>8</string>
-		</dict>
+            <key>19</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>8-4</string>
+            <key>answer</key>
+            <string>4</string>
+        </dict>
 		<dict>
-			<key>20</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>11-5</string>
-			<key>answer</key>
-			<string>6</string>
-		</dict>
+            <key>20</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>8-3</string>
+            <key>answer</key>
+            <string>5</string>
+        </dict>
 		<dict>
-			<key>21</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>7-4</string>
-			<key>answer</key>
-			<string>3</string>
-		</dict>
+            <key>21</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>8-2</string>
+            <key>answer</key>
+            <string>6</string>
+        </dict>
 		<dict>
-			<key>22</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>11-3</string>
-			<key>answer</key>
-			<string>8</string>
-		</dict>
+            <key>22</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>7-6</string>
+            <key>answer</key>
+            <string>1</string>
+        </dict>
 		<dict>
-			<key>23</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>10-3</string>
-			<key>answer</key>
-			<string>7</string>
-		</dict>
+            <key>23</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>7-5</string>
+            <key>answer</key>
+            <string>2</string>
+        </dict>
 		<dict>
-			<key>24</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>12-6</string>
-			<key>answer</key>
-			<string>6</string>
-		</dict>
+            <key>24</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>7-4</string>
+            <key>answer</key>
+            <string>3</string>
+        </dict>
 		<dict>
-			<key>25</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>8-6</string>
-			<key>answer</key>
-			<string>2</string>
-		</dict>
+            <key>25</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>7-3</string>
+            <key>answer</key>
+            <string>4</string>
+        </dict>
+		<dict>
+            <key>26</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>7-2</string>
+            <key>answer</key>
+            <string>5</string>
+        </dict>
+		<dict>
+            <key>27</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>6-5</string>
+            <key>answer</key>
+            <string>1</string>
+        </dict>
+		<dict>
+            <key>28</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>6-4</string>
+            <key>answer</key>
+            <string>2</string>
+        </dict>
+		<dict>
+            <key>29</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>6-3</string>
+            <key>answer</key>
+            <string>3</string>
+        </dict>
+		<dict>
+            <key>30</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>6-2</string>
+            <key>answer</key>
+            <string>4</string>
+        </dict>
+		<dict>
+            <key>31</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>5-4</string>
+            <key>answer</key>
+            <string>1</string>
+        </dict>
+		<dict>
+            <key>32</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>5-3</string>
+            <key>answer</key>
+            <string>2</string>
+        </dict>
+		<dict>
+            <key>33</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>5-2</string>
+            <key>answer</key>
+            <string>3</string>
+        </dict>
+		<dict>
+            <key>34</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>4-3</string>
+            <key>answer</key>
+            <string>1</string>
+        </dict>
+		<dict>
+            <key>35</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>4-2</string>
+            <key>answer</key>
+            <string>2</string>
+        </dict>
+		<dict>
+            <key>36</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>3-2</string>
+            <key>answer</key>
+            <string>1</string>
+        </dict>
 	</array>
 </dict>
 </plist>
