--- a/Resources/res/plist/level7.plist
+++ b/Resources/res/plist/level7.plist
@@ -5,205 +5,197 @@
 	<key>anspro</key>
 	<array>
 		<dict>
-			<key>1</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>5(8)</string>
-			<key>answer</key>
-			<string>40</string>
-		</dict>
+            <key>1</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>2x6</string>
+            <key>answer</key>
+            <string>12</string>
+        </dict>
 		<dict>
-			<key>2</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>3(4)</string>
-			<key>answer</key>
-			<string>12</string>
-		</dict>
+            <key>2</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>2x7</string>
+            <key>answer</key>
+            <string>14</string>
+        </dict>
 		<dict>
-			<key>3</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>2(7)</string>
-			<key>answer</key>
-			<string>14</string>
-		</dict>
+            <key>3</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>2x8</string>
+            <key>answer</key>
+            <string>16</string>
+        </dict>
 		<dict>
-			<key>4</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>5(7)</string>
-			<key>answer</key>
-			<string>35</string>
-		</dict>
+            <key>4</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>2x9</string>
+            <key>answer</key>
+            <string>18</string>
+        </dict>
 		<dict>
-			<key>5</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>2(8)</string>
-			<key>answer</key>
-			<string>16</string>
-		</dict>
+            <key>5</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>3x4</string>
+            <key>answer</key>
+            <string>12</string>
+        </dict>
 		<dict>
-			<key>6</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>3(5)</string>
-			<key>answer</key>
-			<string>15</string>
-		</dict>
+            <key>6</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>3x5</string>
+            <key>answer</key>
+            <string>15</string>
+        </dict>
 		<dict>
-			<key>7</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>5(6)</string>
-			<key>answer</key>
-			<string>30</string>
-		</dict>
+            <key>7</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>3x6</string>
+            <key>answer</key>
+            <string>18</string>
+        </dict>
 		<dict>
-			<key>8</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>2(4)</string>
-			<key>answer</key>
-			<string>8</string>
-		</dict>
+            <key>8</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>3x7</string>
+            <key>answer</key>
+            <string>21</string>
+        </dict>
 		<dict>
-			<key>9</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>3(9)</string>
-			<key>answer</key>
-			<string>27</string>
-		</dict>
+            <key>9</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>3x8</string>
+            <key>answer</key>
+            <string>24</string>
+        </dict>
 		<dict>
-			<key>10</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>5(4)</string>
-			<key>answer</key>
-			<string>20</string>
-		</dict>
+            <key>10</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>3x9</string>
+            <key>answer</key>
+            <string>27</string>
+        </dict>
 		<dict>
-			<key>11</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>3(7)</string>
-			<key>answer</key>
-			<string>21</string>
-		</dict>
+            <key>11</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>4*3</string>
+            <key>answer</key>
+            <string>12</string>
+        </dict>
 		<dict>
-			<key>12</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>3(4)</string>
-			<key>answer</key>
-			<string>12</string>
-		</dict>
+            <key>12</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>4*5</string>
+            <key>answer</key>
+            <string>20</string>
+        </dict>
 		<dict>
-			<key>13</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>4(9)</string>
-			<key>answer</key>
-			<string>36</string>
-		</dict>
+            <key>13</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>4*6</string>
+            <key>answer</key>
+            <string>24</string>
+        </dict>
 		<dict>
-			<key>14</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>4(7)</string>
-			<key>answer</key>
-			<string>28</string>
-		</dict>
+            <key>14</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>4*7</string>
+            <key>answer</key>
+            <string>28</string>
+        </dict>
 		<dict>
-			<key>15</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>2(5)</string>
-			<key>answer</key>
-			<string>10</string>
-		</dict>
+            <key>15</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>4*8</string>
+            <key>answer</key>
+            <string>32</string>
+        </dict>
 		<dict>
-			<key>16</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>5(8)</string>
-			<key>answer</key>
-			<string>40</string>
-		</dict>
+            <key>16</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>4*9</string>
+            <key>answer</key>
+            <string>36</string>
+        </dict>
 		<dict>
-			<key>17</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>5(7)</string>
-			<key>answer</key>
-			<string>35</string>
-		</dict>
+            <key>17</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>4*10</string>
+            <key>answer</key>
+            <string>40</string>
+        </dict>
 		<dict>
-			<key>18</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>5(6)</string>
-			<key>answer</key>
-			<string>30</string>
-		</dict>
+            <key>18</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>5*3</string>
+            <key>answer</key>
+            <string>15</string>
+        </dict>
 		<dict>
-			<key>19</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>3(6)</string>
-			<key>answer</key>
-			<string>18</string>
-		</dict>
+            <key>19</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>5*4</string>
+            <key>answer</key>
+            <string>20</string>
+        </dict>
 		<dict>
-			<key>20</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>6(7)</string>
-			<key>answer</key>
-			<string>42</string>
-		</dict>
+            <key>20</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>5*6</string>
+            <key>answer</key>
+            <string>30</string>
+        </dict>
 		<dict>
-			<key>21</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>3(2)</string>
-			<key>answer</key>
-			<string>6</string>
-		</dict>
+            <key>21</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>5*7</string>
+            <key>answer</key>
+            <string>35</string>
+        </dict>
 		<dict>
-			<key>22</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>3(3)</string>
-			<key>answer</key>
-			<string>9</string>
-		</dict>
+            <key>22</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>5*8</string>
+            <key>answer</key>
+            <string>40</string>
+        </dict>
 		<dict>
-			<key>23</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>5(3)</string>
-			<key>answer</key>
-			<string>15</string>
-		</dict>
+            <key>23</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>5*9</string>
+            <key>answer</key>
+            <string>45</string>
+        </dict>
 		<dict>
-			<key>24</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>4(9)</string>
-			<key>answer</key>
-			<string>36</string>
-		</dict>
-		<dict>
-			<key>25</key>
-			<string>value</string>
-			<key>x1</key>
-			<string>5(9)</string>
-			<key>answer</key>
-			<string>45</string>
-		</dict>
+            <key>24</key>
+            <string>value</string>
+            <key>x1</key>
+            <string>5*10</string>
+            <key>answer</key>
+            <string>50</string>
+        </dict>
 	</array>
 </dict>
 </plist>
