--- a/Resources/res/plist/level20.plist
+++ b/Resources/res/plist/level20.plist
@@ -200,7 +200,7 @@
 			<key>13</key>
 			<string>value</string>
 			<key>x1</key>
-			<string>6</string>
+			<string>2</string>
 			<key>y1</key>
 			<string>12</string>
 			<key>x2</key>
@@ -210,7 +210,7 @@
 			<key>op</key>
 			<string></string>
 			<key>answer</key>
-			<string>1/2</string>
+			<string>1/6</string>
 		</dict>
 		<dict>
 			<key>14</key>
@@ -520,7 +520,7 @@
 			<key>33</key>
 			<string>value</string>
 			<key>x1</key>
-			<string>6</string>
+			<string>8</string>
 			<key>y1</key>
 			<string>12</string>
 			<key>x2</key>
@@ -530,7 +530,7 @@
 			<key>op</key>
 			<string></string>
 			<key>answer</key>
-			<string>1/2</string>
+			<string>2/3</string>
 		</dict>
 		<dict>
 			<key>34</key>
@@ -584,7 +584,7 @@
 			<key>37</key>
 			<string>value</string>
 			<key>x1</key>
-			<string>12</string>
+			<string>3</string>
 			<key>y1</key>
 			<string>18</string>
 			<key>x2</key>
@@ -594,7 +594,7 @@
 			<key>op</key>
 			<string></string>
 			<key>answer</key>
-			<string>2/3</string>
+			<string>1/6</string>
 		</dict>
 		<dict>
 			<key>38</key>
@@ -643,7 +643,825 @@
 			<string></string>
 			<key>answer</key>
 			<string>4/9</string>
-		</dict>		
+		</dict>	
+        <dict>
+			<key>41</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>2</string>
+			<key>y1</key>
+			<string>14</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/7</string>
+		</dict>
+        <dict>
+			<key>42</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>2</string>
+			<key>y1</key>
+			<string>8</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/4</string>
+		</dict>
+        <dict>
+			<key>43</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>3</string>
+			<key>y1</key>
+			<string>9</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/3</string>
+		</dict>
+        <dict>
+			<key>44</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>6</string>
+			<key>y1</key>
+			<string>10</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>3/5</string>
+		</dict>
+        <dict>
+			<key>45</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>9</string>
+			<key>y1</key>
+			<string>12</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>3/4</string>
+		</dict>
+        <dict>
+			<key>46</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>3</string>
+			<key>y1</key>
+			<string>15</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/5</string>
+		</dict>
+        <dict>
+			<key>47</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>5</string>
+			<key>y1</key>
+			<string>15</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/3</string>
+		</dict>
+        <dict>
+			<key>48</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>2</string>
+			<key>y1</key>
+			<string>16</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/8</string>
+		</dict>
+        <dict>
+			<key>49</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>4</string>
+			<key>y1</key>
+			<string>16</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/4</string>
+		</dict>
+        <dict>
+			<key>50</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>12</string>
+			<key>y1</key>
+			<string>16</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>3/4</string>
+		</dict>
+        <dict>
+			<key>52</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>9</string>
+			<key>y1</key>
+			<string>16</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>9/16</string>
+		</dict>
+        <dict>
+			<key>53</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>4</string>
+			<key>y1</key>
+			<string>20</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/5</string>
+		</dict>
+        <dict>
+			<key>54</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>5</string>
+			<key>y1</key>
+			<string>20</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/4</string>
+		</dict>
+        <dict>
+			<key>55</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>4</string>
+			<key>y1</key>
+			<string>24</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/6</string>
+		</dict>
+        <dict>
+			<key>56</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>5</string>
+			<key>y1</key>
+			<string>25</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/5</string>
+		</dict>
+        <dict>
+			<key>57</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>10</string>
+			<key>y1</key>
+			<string>25</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>2/5</string>
+		</dict>
+        <dict>
+			<key>58</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>15</string>
+			<key>y1</key>
+			<string>25</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>3/5</string>
+		</dict>
+        <dict>
+			<key>59</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>3</string>
+			<key>y1</key>
+			<string>27</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/9</string>
+		</dict>
+        <dict>
+			<key>60</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>21</string>
+			<key>y1</key>
+			<string>27</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>7/9</string>
+		</dict>
+        <dict>
+			<key>61</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>7</string>
+			<key>y1</key>
+			<string>28</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/4</string>
+		</dict>
+        <dict>
+			<key>62</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>21</string>
+			<key>y1</key>
+			<string>28</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>3/4</string>
+		</dict>
+        <dict>
+			<key>63</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>3</string>
+			<key>y1</key>
+			<string>30</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/10</string>
+		</dict>
+        <dict>
+			<key>64</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>5</string>
+			<key>y1</key>
+			<string>30</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/6</string>
+		</dict>
+        <dict>
+			<key>65</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>10</string>
+			<key>y1</key>
+			<string>30</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/3</string>
+		</dict>
+        <dict>
+			<key>66</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>20</string>
+			<key>y1</key>
+			<string>30</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>2/3</string>
+		</dict>
+        <dict>
+			<key>67</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>2</string>
+			<key>y1</key>
+			<string>32</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/16</string>
+		</dict>
+        <dict>
+			<key>68</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>4</string>
+			<key>y1</key>
+			<string>32</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/8</string>
+		</dict>
+        <dict>
+			<key>69</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>24</string>
+			<key>y1</key>
+			<string>32</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>3/4</string>
+		</dict>
+        <dict>
+			<key>70</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>17</string>
+			<key>y1</key>
+			<string>34</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/2</string>
+		</dict>
+        <dict>
+			<key>71</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>14</string>
+			<key>y1</key>
+			<string>35</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>2/5</string>
+		</dict>
+        <dict>
+			<key>72</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>21</string>
+			<key>y1</key>
+			<string>35</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>3/5</string>
+		</dict>
+        <dict>
+			<key>73</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>2</string>
+			<key>y1</key>
+			<string>36</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/18</string>
+		</dict>
+        <dict>
+			<key>74</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>4</string>
+			<key>y1</key>
+			<string>36</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/9</string>
+		</dict>
+        <dict>
+			<key>75</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>9</string>
+			<key>y1</key>
+			<string>27</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/4</string>
+		</dict>
+        <dict>
+			<key>76</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>18</string>
+			<key>y1</key>
+			<string>36</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/2</string>
+		</dict>
+        <dict>
+			<key>77</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>27</string>
+			<key>y1</key>
+			<string>36</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>3/4</string>
+		</dict>
+        <dict>
+			<key>78</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>16\</string>
+			<key>y1</key>
+			<string>40</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>2/5</string>
+		</dict>
+        <dict>
+			<key>79</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>16</string>
+			<key>y1</key>
+			<string>48</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/3</string>
+		</dict>
+        <dict>
+			<key>80</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>32</string>
+			<key>y1</key>
+			<string>48</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>2/3</string>
+		</dict>
+        <dict>
+			<key>81</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>27</string>
+			<key>y1</key>
+			<string>54</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/2</string>
+		</dict>
+        <dict>
+			<key>82</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>35</string>
+			<key>y1</key>
+			<string>70</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/2</string>
+		</dict>
+        <dict>
+			<key>83</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>36</string>
+			<key>y1</key>
+			<string>72</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/2</string>
+		</dict>
+        <dict>
+			<key>84</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>18</string>
+			<key>y1</key>
+			<string>81</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>2/9</string>
+		</dict>
+        <dict>
+			<key>85</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>36</string>
+			<key>y1</key>
+			<string>81</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>4/9</string>
+		</dict>
+        <dict>
+			<key>86</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>45</string>
+			<key>y1</key>
+			<string>81</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>5/9</string>
+		</dict>
+        <dict>
+			<key>87</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>46</string>
+			<key>y1</key>
+			<string>92</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/2</string>
+		</dict>
+        <dict>
+			<key>88</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>47</string>
+			<key>y1</key>
+			<string>94</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/2</string>
+		</dict>
+        <dict>
+			<key>89</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>48</string>
+			<key>y1</key>
+			<string>96</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/2</string>
+		</dict>
+        <dict>
+			<key>90</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>49</string>
+			<key>y1</key>
+			<string>98</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/2</string>
+		</dict>
+        <dict>
+			<key>91</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>24</string>
+			<key>y1</key>
+			<string>96</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>1/4</string>
+		</dict>
+        <dict>
+			<key>92</key>
+			<string>value</string>
+			<key>x1</key>
+			<string>72</string>
+			<key>y1</key>
+			<string>96</string>
+			<key>x2</key>
+			<string></string>
+			<key>y2</key>
+			<string></string>
+			<key>op</key>
+			<string></string>
+			<key>answer</key>
+			<string>3/4</string>
+		</dict>
+        
+            
 	</array>
 </dict>
 </plist>
