--- a/Resources/res/plist/levels.plist
+++ b/Resources/res/plist/levels.plist
@@ -52,6 +52,9 @@
 			<key>time3</key>
 			<integer>300</integer>
 		</dict>
+
+		
+
 		<dict>
 			<key>level4</key>
 			<string>value</string>
@@ -83,6 +86,7 @@
 			<integer>10</integer>
 			<key>time3</key>
 			<integer>300</integer>
+		</dict>
 		<dict>
 			<key>level6</key>
 			<string>value</string>
@@ -115,6 +119,7 @@
 			<key>time3</key>
 			<integer>300</integer>
 		</dict>
+
 		<dict>
 			<key>level8</key>
 			<string>value</string>
@@ -226,6 +231,7 @@
 			<integer>10</integer>
 			<key>time3</key>
 			<integer>300</integer>
+		</dict>
 		<dict>
 			<key>level15</key>
 			<string>value</string>
