--- a/Resources/res/plist/level11.plist
+++ b/Resources/res/plist/level11.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>starttime</key>
+	<array>
+		<string>20</string>
+		<string>25</string>
+		<string>40</string>
+		<string>60</string>
+	</array>
 	<key>anspro</key>
 	<array>
 		<dict>
