--- a/Resources/res/plist/level20.plist
+++ b/Resources/res/plist/level20.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>starttime</key>
+	<array>
+		<string>15</string>
+		<string>20</string>
+		<string>40</string>
+		<string>60</string>
+	</array>
 	<key>anspro</key>
 	<array>
 		<dict>
@@ -643,8 +650,8 @@
 			<string></string>
 			<key>answer</key>
 			<string>4/9</string>
-		</dict>	
-        <dict>
+		</dict>
+		<dict>
 			<key>41</key>
 			<string>value</string>
 			<key>x1</key>
@@ -660,7 +667,7 @@
 			<key>answer</key>
 			<string>1/7</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>42</key>
 			<string>value</string>
 			<key>x1</key>
@@ -676,7 +683,7 @@
 			<key>answer</key>
 			<string>1/4</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>43</key>
 			<string>value</string>
 			<key>x1</key>
@@ -692,7 +699,7 @@
 			<key>answer</key>
 			<string>1/3</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>44</key>
 			<string>value</string>
 			<key>x1</key>
@@ -708,7 +715,7 @@
 			<key>answer</key>
 			<string>3/5</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>45</key>
 			<string>value</string>
 			<key>x1</key>
@@ -724,7 +731,7 @@
 			<key>answer</key>
 			<string>3/4</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>46</key>
 			<string>value</string>
 			<key>x1</key>
@@ -740,7 +747,7 @@
 			<key>answer</key>
 			<string>1/5</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>47</key>
 			<string>value</string>
 			<key>x1</key>
@@ -756,7 +763,7 @@
 			<key>answer</key>
 			<string>1/3</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>48</key>
 			<string>value</string>
 			<key>x1</key>
@@ -772,7 +779,7 @@
 			<key>answer</key>
 			<string>1/8</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>49</key>
 			<string>value</string>
 			<key>x1</key>
@@ -788,7 +795,7 @@
 			<key>answer</key>
 			<string>1/4</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>50</key>
 			<string>value</string>
 			<key>x1</key>
@@ -804,7 +811,7 @@
 			<key>answer</key>
 			<string>3/4</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>52</key>
 			<string>value</string>
 			<key>x1</key>
@@ -820,7 +827,7 @@
 			<key>answer</key>
 			<string>9/16</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>53</key>
 			<string>value</string>
 			<key>x1</key>
@@ -836,7 +843,7 @@
 			<key>answer</key>
 			<string>1/5</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>54</key>
 			<string>value</string>
 			<key>x1</key>
@@ -852,7 +859,7 @@
 			<key>answer</key>
 			<string>1/4</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>55</key>
 			<string>value</string>
 			<key>x1</key>
@@ -868,7 +875,7 @@
 			<key>answer</key>
 			<string>1/6</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>56</key>
 			<string>value</string>
 			<key>x1</key>
@@ -884,7 +891,7 @@
 			<key>answer</key>
 			<string>1/5</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>57</key>
 			<string>value</string>
 			<key>x1</key>
@@ -900,7 +907,7 @@
 			<key>answer</key>
 			<string>2/5</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>58</key>
 			<string>value</string>
 			<key>x1</key>
@@ -916,7 +923,7 @@
 			<key>answer</key>
 			<string>3/5</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>59</key>
 			<string>value</string>
 			<key>x1</key>
@@ -932,7 +939,7 @@
 			<key>answer</key>
 			<string>1/9</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>60</key>
 			<string>value</string>
 			<key>x1</key>
@@ -948,7 +955,7 @@
 			<key>answer</key>
 			<string>7/9</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>61</key>
 			<string>value</string>
 			<key>x1</key>
@@ -964,7 +971,7 @@
 			<key>answer</key>
 			<string>1/4</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>62</key>
 			<string>value</string>
 			<key>x1</key>
@@ -980,7 +987,7 @@
 			<key>answer</key>
 			<string>3/4</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>63</key>
 			<string>value</string>
 			<key>x1</key>
@@ -996,7 +1003,7 @@
 			<key>answer</key>
 			<string>1/10</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>64</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1012,7 +1019,7 @@
 			<key>answer</key>
 			<string>1/6</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>65</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1028,7 +1035,7 @@
 			<key>answer</key>
 			<string>1/3</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>66</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1044,7 +1051,7 @@
 			<key>answer</key>
 			<string>2/3</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>67</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1060,7 +1067,7 @@
 			<key>answer</key>
 			<string>1/16</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>68</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1076,7 +1083,7 @@
 			<key>answer</key>
 			<string>1/8</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>69</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1092,7 +1099,7 @@
 			<key>answer</key>
 			<string>3/4</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>70</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1108,7 +1115,7 @@
 			<key>answer</key>
 			<string>1/2</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>71</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1124,7 +1131,7 @@
 			<key>answer</key>
 			<string>2/5</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>72</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1140,7 +1147,7 @@
 			<key>answer</key>
 			<string>3/5</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>73</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1156,7 +1163,7 @@
 			<key>answer</key>
 			<string>1/18</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>74</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1172,7 +1179,7 @@
 			<key>answer</key>
 			<string>1/9</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>75</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1188,7 +1195,7 @@
 			<key>answer</key>
 			<string>1/3</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>76</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1204,7 +1211,7 @@
 			<key>answer</key>
 			<string>1/2</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>77</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1220,7 +1227,7 @@
 			<key>answer</key>
 			<string>3/4</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>78</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1236,7 +1243,7 @@
 			<key>answer</key>
 			<string>2/5</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>79</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1252,7 +1259,7 @@
 			<key>answer</key>
 			<string>1/3</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>80</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1268,7 +1275,7 @@
 			<key>answer</key>
 			<string>2/3</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>81</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1284,7 +1291,7 @@
 			<key>answer</key>
 			<string>1/2</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>82</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1300,7 +1307,7 @@
 			<key>answer</key>
 			<string>1/2</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>83</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1316,7 +1323,7 @@
 			<key>answer</key>
 			<string>1/2</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>84</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1332,7 +1339,7 @@
 			<key>answer</key>
 			<string>2/9</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>85</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1348,7 +1355,7 @@
 			<key>answer</key>
 			<string>4/9</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>86</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1364,7 +1371,7 @@
 			<key>answer</key>
 			<string>5/9</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>87</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1380,7 +1387,7 @@
 			<key>answer</key>
 			<string>1/2</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>88</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1396,7 +1403,7 @@
 			<key>answer</key>
 			<string>1/2</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>89</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1412,7 +1419,7 @@
 			<key>answer</key>
 			<string>1/2</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>90</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1428,7 +1435,7 @@
 			<key>answer</key>
 			<string>1/2</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>91</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1444,7 +1451,7 @@
 			<key>answer</key>
 			<string>1/4</string>
 		</dict>
-        <dict>
+		<dict>
 			<key>92</key>
 			<string>value</string>
 			<key>x1</key>
@@ -1460,8 +1467,6 @@
 			<key>answer</key>
 			<string>3/4</string>
 		</dict>
-        
-            
 	</array>
 </dict>
 </plist>
