--- a/Resources/res/plist/level24.plist
+++ b/Resources/res/plist/level24.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>starttime</key>
+	<array>
+		<string>13</string>
+		<string>16</string>
+		<string>40</string>
+		<string>60</string>
+	</array>
 	<key>anspro</key>
 	<array>
 		<dict>
@@ -643,7 +650,7 @@
 			<string>x</string>
 			<key>answer</key>
 			<string>27/49</string>
-		</dict>		
+		</dict>
 	</array>
 </dict>
 </plist>
