--- a/Resources/res/plist/levels.plist
+++ b/Resources/res/plist/levels.plist
@@ -23,8 +23,12 @@
 			<integer>10</integer>
 			<key>time3</key>
 			<integer>300</integer>
+			<key>leveltime</key>
+			<integer>30</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>30</integer>
 			<key>bluetime</key>
 			<integer>1</integer>
 			<key>level2</key>
@@ -45,6 +49,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>40</integer>
 			<key>bluetime</key>
 			<integer>1</integer>
 			<key>level3</key>
@@ -65,6 +71,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>40</integer>
 			<key>bluetime</key>
 			<integer>1</integer>
 			<key>level4</key>
@@ -85,6 +93,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>80</integer>
 			<key>bluetime</key>
 			<integer>2</integer>
 			<key>level5</key>
@@ -105,6 +115,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>60</integer>
 			<key>bluetime</key>
 			<real>1.3</real>
 			<key>level6</key>
@@ -125,6 +137,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>30</integer>
 			<key>bluetime</key>
 			<integer>1</integer>
 			<key>level7</key>
@@ -145,6 +159,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>30</integer>
 			<key>bluetime</key>
 			<integer>1</integer>
 			<key>level8</key>
@@ -165,6 +181,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>40</integer>
 			<key>bluetime</key>
 			<integer>1</integer>
 			<key>level9</key>
@@ -185,6 +203,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>60</integer>
 			<key>bluetime</key>
 			<integer>1</integer>
 			<key>level10</key>
@@ -205,6 +225,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>40</integer>
 			<key>bluetime</key>
 			<integer>1</integer>
 			<key>level11</key>
@@ -225,6 +247,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>40</integer>
 			<key>bluetime</key>
 			<integer>1</integer>
 			<key>level12</key>
@@ -245,6 +269,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>40</integer>
 			<key>bluetime</key>
 			<integer>1</integer>
 			<key>level13</key>
@@ -265,6 +291,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>60</integer>
 			<key>bluetime</key>
 			<integer>1</integer>
 			<key>level14</key>
@@ -285,6 +313,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>40</integer>
 			<key>bluetime</key>
 			<real>1.2</real>
 			<key>level15</key>
@@ -305,6 +335,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>40</integer>
 			<key>bluetime</key>
 			<integer>1</integer>
 			<key>level16</key>
@@ -325,6 +357,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>60</integer>
 			<key>bluetime</key>
 			<real>1.6</real>
 			<key>level17</key>
@@ -345,6 +379,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>60</integer>
 			<key>bluetime</key>
 			<real>3.5</real>
 			<key>level18</key>
@@ -365,6 +401,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>60</integer>
 			<key>bluetime</key>
 			<real>3.5</real>
 			<key>level19</key>
@@ -385,6 +423,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>40</integer>
 			<key>bluetime</key>
 			<integer>3</integer>
 			<key>level20</key>
@@ -405,6 +445,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>20</integer>
 			<key>bluetime</key>
 			<integer>1</integer>
 			<key>level21</key>
@@ -425,6 +467,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>40</integer>
 			<key>bluetime</key>
 			<real>2.5</real>
 			<key>level22</key>
@@ -445,6 +489,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>20</integer>
 			<key>bluetime</key>
 			<integer>1</integer>
 			<key>level23</key>
@@ -465,6 +511,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>40</integer>
 			<key>bluetime</key>
 			<real>2.6</real>
 			<key>level24</key>
@@ -485,6 +533,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>40</integer>
 			<key>bluetime</key>
 			<real>2.4</real>
 			<key>level25</key>
@@ -505,6 +555,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>60</integer>
 			<key>bluetime</key>
 			<real>4.6</real>
 			<key>level26</key>
@@ -525,6 +577,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>80</integer>
 			<key>level27</key>
 			<string>value</string>
 			<key>bluetime</key>
@@ -545,6 +599,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>80</integer>
 			<key>level28</key>
 			<string>value</string>
 			<key>bluetime</key>
@@ -565,6 +621,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>80</integer>
 			<key>leve29</key>
 			<string>value</string>
 			<key>bluetime</key>
@@ -585,6 +643,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>60</integer>
 			<key>leve30</key>
 			<string>value</string>
 			<key>x</key>
@@ -605,6 +665,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>20</integer>
 			<key>level31</key>
 			<string>value</string>
 			<key>x</key>
@@ -625,6 +687,8 @@
 			<integer>300</integer>
 		</dict>
 		<dict>
+			<key>leveltime</key>
+			<integer>80</integer>
 			<key>level32</key>
 			<string>value</string>
 			<key>x</key>
